# filesender

scripts/client/python/: pyproject.toml
scripts/client/python/filesender/: api.py  main.py  request_types.py  response_types.py
